# footswitch

./: README.md
.github/workflows/: ci.yml
client/: Cargo.toml  README-cargo.md  README.md
client/.cargo/: config
client/name-squat/: Cargo.toml
client/name-squat/src/: main.rs
client/src/: audio_controller.rs  macos.rs  main.rs  os.rs  serial_driver.rs  windows.rs
keyboard/: README.md  keyboard.ino
serial/: Cargo.toml  README.md  footswitch_serial_windows.py  serial.ino
serial/src/: audio_controller.rs  macos.rs  main.rs  os.rs  windows.rs
