[package]
name = "footswitch"
version = "0.1.0"
authors = ["micolous"]
edition = "2018"
homepage = "https://github.com/micolous/footswitch"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"
serialport = "4.0.0"
# TODO: https://github.com/enigo-rs/enigo/pull/109
enigo = { git = "https://github.com/micolous/enigo", branch = "f13" }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.10.0"
core-foundation-sys = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
        "combaseapi",
        "coml2api",
        "endpointvolume",
        "functiondiscoverykeys_devpkey",
        "minwindef",
        "mmdeviceapi",
        "objbase",
        "propkeydef",
        "propsys",
        "winbase",
        "winerror",
        "wtypesbase",
    ]}
