[package]
name = "serial"
version = "0.1.0"
authors = ["micolous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
        "combaseapi",
        "coml2api",
        "endpointvolume",
        "functiondiscoverykeys_devpkey",
        "mmdeviceapi",
        "objbase",
        "propkey",
        "winbase",
        "winerror",
        "winuser",
        "wtypesbase",
    ]}
