[package]
name = "footswitch_serial"
version = "0.1.0"
authors = ["micolous"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serial = "0.4"
enigo = { path = "../../enigo" }

[target.'cfg(target_os = "macos")'.dependencies]
# cpal = { path = "../../cpal" }
coreaudio-rs = "0.10.0"
core-foundation-sys = "0.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
        "combaseapi",
        "coml2api",
        "endpointvolume",
        "functiondiscoverykeys_devpkey",
        "minwindef",
        "mmdeviceapi",
        "objbase",
        "propkeydef",
        "propsys",
        "winbase",
        "winerror",
        "wtypesbase",
    ]}
